# ksl-classifieds-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  SPEC.md  TIMETRACKING.md  TODO.md  start.md
.github/workflows/: ci.yml  release.yml
DAG/: COMPANION.yml
adrs/: TEMPLATE.md
design/: architecture.md  stage-1.md
docs/: API_RESEARCH.md
instructions/: stage-1.md  stage-2.md  stage-3.md  stage-4.md  stage-5.md
plan/: stage-1-dag.md
spec/: requirements.md
src/: categories.rs  config.rs  error.rs  main.rs  parser.rs  types.rs
src/client/: cars.rs  classifieds.rs  mod.rs  rate_limiter.rs
src/db/: mod.rs  searches.rs  tests.rs  tracking.rs
src/report/: mod.rs  template.rs
src/tools/: mod.rs  report.rs  search.rs  searches.rs  tracking.rs
tests/fixtures/: CAPTURE_NOTES.md  cars_search.json  listing_detail.html  search_results.html
