[package]
name = "ksl-classifieds-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for searching KSL Classifieds and tracking listing prices"
license = "MIT"

[[bin]]
name = "ksl-classifieds-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
scraper = "0.20"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
percent-encoding = "2"
schemars = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
form_urlencoded = "1"
